--- a/docs/github_style/css/extra.css
+++ b/docs/github_style/css/extra.css
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 .md-nav__title {
     background: none!important;
     box-shadow: none!important;
+    color: #becada;
 }
 
 .md-top {
