--- a/docs/custom_style/github_orange.css
+++ b/docs/custom_style/github_orange.css
@@ -1,7 +1,7 @@
 /* Basic body and typography adjustments to resemble GitHub's default */
 body {
-  background: #0d1117;
-  color: #becada; /* Dark text color */
+  background: #212830;
+  color: #d1d7e0; /* Dark text color */
 }
 
 /* Headings */
@@ -11,7 +11,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-typeset h1 {
@@ -20,22 +20,22 @@ h6 {
 .md-nav__title {
   background: none !important;
   box-shadow: none !important;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-nav--lifted > .md-nav__list > .md-nav__item--active > .md-nav__link {
   background: none !important;
   box-shadow: none !important;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-top {
   background-color: #865000;
-  color: #becada;
+  color: #d1d7e0;
 }
 .md-top:hover {
   background-color: #ad6800;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-typeset code {
@@ -64,53 +64,53 @@ h6 {
 
 .md-header {
   background-color: #865000;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-tabs {
   background-color: #865000;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-search__form {
   background-color: #724400;
-  color: #becada;
+  color: #d1d7e0;
 }
 .md-search__form:hover {
   background-color: #ad6800;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 [data-md-toggle="search"]:checked ~ .md-header .md-search__form {
   background-color: #724400;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-search-result_meta {
   background-color: #303f53;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-footer__inner {
-  color: #becada;
+  color: #d1d7e0;
 }
 
 .md-footer-meta {
   background-color: #010409;
-  color: #becada;
+  color: #d1d7e0;
 }
 
 [data-md-color-primary="orange"] {
   --md-primary-fg-color: #ffa724;
   --md-primary-fg-color--light: #ffa724;
   --md-primary-fg-color--dark: #fa8900;
-  --md-primary-bg-color: #becada;
-  --md-primary-bg-color--light: #becada;
+  --md-primary-bg-color: #d1d7e0;
+  --md-primary-bg-color--light: #d1d7e0;
 }
 
 [data-md-color-accent="orange"] {
   --md-accent-fg-color: #ff9100;
   --md-accent-fg-color--transparent: #ff91001a;
-  --md-accent-bg-color: #becada;
-  --md-accent-bg-color--light: #becada;
+  --md-accent-bg-color: #d1d7e0;
+  --md-accent-bg-color--light: #d1d7e0;
 }
