--- a/docs/custom_style/github_orange.css
+++ b/docs/custom_style/github_orange.css
@@ -100,6 +100,11 @@ h6 {
   color: #d1d7e0;
 }
 
+.md-footer {
+  background-color: #13161d75;
+  color: #d1d7e0;
+}
+
 [data-md-color-primary="orange"] {
   --md-primary-fg-color: #ffa724;
   --md-primary-fg-color--light: #ffa724;
